fix(Button): remove border on firefox

--- a/src/components/buttons/Button.module.scss
+++ b/src/components/buttons/Button.module.scss
@@ -3,6 +3,7 @@
 .Button {
   display: flex;
   align-items: center;
+  border: none;
   justify-content: center;
   border-radius: 15px;
   min-width: 110px;
